[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's built-in commands"
edition = "2021"
license = "MIT"
name = "nu-command"
version = "0.64.0"

[dependencies]
nu-color-config = { version = "0.64.0"  }
nu-engine = { version = "0.64.0"  }
nu-glob = { version = "0.64.0" }
nu-json = { version = "0.64.0"  }
nu-parser = { version = "0.64.0"  }
nu-path = { version = "0.64.0"  }
nu-pretty-hex = { version = "0.64.0"  }
nu-protocol = { version = "0.64.0"  }
nu-system = { version = "0.64.0"  }
nu-table = { version = "0.64.0"  }
nu-term-grid = { version = "0.64.0"  }
nu-test-support = { version = "0.64.0"  }
nu-utils = { version = "0.64.0" }
nu-ansi-term = "0.46.0"

itertools = "0.10.0"
lscolors = { version = "0.9.0", features = ["crossterm"]}
log = "0.4.14"
pathdiff = "0.2.1"
reedline = { version = "0.7.0", features = ["bashisms", "sqlite"]}
regex = "1.5.4"
terminal_size = "0.1.17"
